--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon-16x16.png">
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="shortcut icon" href="Template\img\icons\favicon-16x16.png">
 </head>
 
 <body>
@@ -40,6 +41,6 @@
         <p>Desarrollado con ♥ - LC2</p>
     </footer>
 </body>
-6
+
 
 </html>
