--- a/tup-lc2-votacion-app/generales.html
+++ b/tup-lc2-votacion-app/generales.html
@@ -29,6 +29,7 @@
             <h2>Titulo de Sección</h2>
             <p>Párrafo o subtítulo</p>
             <div>Imagen</div>
+            <p>asdasd</p>
         </section>
         <section id="sec-contenido">
             <!--Seccion para contenido de la página-->
