--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--Barra de logo portal-->
         <div class="header-page">
-            <img src="img/dine.png" alt="logo" class="logo"> Dirección Nacional
+            <img src="img/icons/favicon-32x32.png" alt="logo" class="logo"> Dirección Nacional
             Electoral
         </div>
         <!--Barra de menú principal-->
