--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -8,14 +8,18 @@
     <link rel="shortcut icon" type="image/png" href="favicon-16x16.png">
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
 </head>
 
 <body>
     <header>
         <!--Barra de logo portal-->
         <div class="header-page">
-            <img src="img/dine.png" alt="logo" class="logo"> Dirección Nacional
-            Electoral
+            <ul>
+                <li><a>href="#inicio">inicio</a></li>
+                <img src="img/icons/favicon-32x32.png" alt="logo" class="logo"> Dirección Nacional Electoral 
+            </ul>
+           
         </div>
         <!--Barra de menú principal-->
         <ul>
@@ -27,15 +31,84 @@
     <main>
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
-            <h2>Titulo de Sección</h2>
-            <p>Párrafo o subtítulo</p>
-            <div>Imagen</div>
+            <h2>Reportes de Elecciones</h2>
+            <p>En esta seccion se visualizará s los datos que fueron agregados al informe en la página de
+                resultados</p>
+            <div></div>
         </section>
         <section id="sec-contenido">
             <!--Seccion para contenido de la página-->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Provincia</th>
+                        <th>Elección</th>
+                        <th>Datos Generales</th>
+                        <th>Datos por agrupación</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><svg height="210" width="800"><path class="leaflet-interactive" stroke="#18a0fb"
+                            stroke-opacity="1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="#18a0fb" fill-opacity="1" fill-rule="evenodd" d="M182 61L179 56L176 58L178 56L176
+                            53L173 55L169 47L168 48L164 45L157 43L158 41L155 41L154 36L149 32L148 33L143 29L142
+                            30L145 32L140 29L138 32L137 30L140 29L139 26L137 28L136 23L133 22L130 27L103 41L81
+                            99L82 134L131 179L159 140L168 137L171 139L174 138L181 141L186 137L195 136L200 130L207
+                            125L205 120L210 118L210 112L205 107L210 110L213 114L215 113L215 110L217 110L218 112L219
+                            111L217 109L221 111L224 109L220 106L222 106L221 102L218 102L216 104L215 103L217 102L212
+                            102L220 101L219 95L216 92L214 86L208 81L200 83L199 80L201 79L202 81L200 77L206 75L203
+                            75L203 73L206 73L201 71L205 70L199 69L198 68L202 68L200 66L195 67L194 66L198 65L188
+                            62L192 62L190 60L183 59L189 64L187 65z"></path></svg></td>
+                        <td>Elecciones 2023 | Generales</td>
+                        <td><p>aaaaaaa</p></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <td><svg height="210" width="800"><path class="leaflet-interactive" stroke="#18a0fb"
+                            stroke-opacity="1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="#18a0fb" fill-opacity="1" fill-rule="evenodd" d="M171 55L163 53L150 45L147 50L143
+                            49L133 60L114 60L114 151L116 151L120 155L122 156L126 153L128 149L124 145L126 143L126
+                            138L128 138L129 133L126 129L126 122L134 126L139 126L169 119L179 114L189 97L190 89L189
+                            87L186 87L182 82L185 75L181 69L171 63L170 64L170 58z"></path></svg></td>
+                        <td>Elecciones 2023 | Generales</td>
+                    </tr>
+                    
+                    <tr>
+                        <td><svg height="210" width="800"><path class="leaflet-interactive" stroke="#18a0fb"
+                            stroke-opacity="1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="#18a0fb" fill-opacity="1" fill-rule="evenodd" d="M194 123L195 120L193 106L189
+                            104L185 106L185 108L183 108L180 102L178 104L174 90L171 89L177 80L176 75L171 73L171
+                            61L169 61L166 67L162 64L156 55L157 49L161 49L161 39L129 38L117 36L115 37L116 48L120
+                            22
+                            62L116 64L115 70L122 80L121 84L110 84L111 85L104 98L104 102L116 101L119 105L118 108L129
+                            111L132 117L137 116L148 118L149 115L151 114L161 116L163 125L166 127L165 131L172 132L178
+                            139L178 141L180 141L187 163L194 162L199 158L198 149L201 149L201 145L199 143L201 135L199
+                            131L194 127L194 124z"></path></svg></td>
+                        <td>Elecciones 2023 | Paso</td>
+
+                    </tr>
+
+                    <tr>
+                        <td><svg height="210" width="800"><path class="leaflet-interactive" stroke="#18a0fb"
+                            stroke-opacity="1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            fill="#18a0fb" fill-opacity="1" fill-rule="evenodd" d="M125 101L127 108L125 110L126
+                            111L122 123L120 125L121 174L160 174L160 157L172 157L197 120L197 114L193 110L195 109L194
+                            105L191 99L189 98L186 84L190 80L196 57L189 52L188 48L180 48L180 42L174 35L159 33L159
+                            30L153 30L151 28L147 29L147 27L139 26L125 28L126 37L121 41L114 42L112 52L106 66L106
+                            89L117 94L119 101z"></path></svg></td>
+                        <td>Elecciones 2023 | Paso</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     <!--Pie de página-->
     <footer>
         <p>Desarrollado con ♥ - LC2</p>
     </footer>
+</body>
+
+
+</html>
