--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -9,20 +9,30 @@
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
     <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
+    <style>
+        .header-page{
+            background-color: rgb(76, 141, 214);>}
+    </style>
 </head>
 
 <body>
+
     <header>
         <!--Barra de logo portal-->
         <div class="header-page">
-            <img src="img/icons/favicon-32x32.png" alt="logo" class="logo"> Dirección Nacional
-            Electoral
+            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" 
+            width="200"
+            alt="logo" 
+            class="logo" 
+            style="background-color: rgb(76, 141, 214);">
+            
         </div>
-        <!--Barra de menú principal-->
-        <ul>
-            <li><a class="active" href="#informes">Informes</a></li>
-            <li><a href="#contact">Contacto</a></li>
-        </ul>
+    </header>
+    <!--Barra de menú principal-->
+    <ul>
+        <li><a class="active" href="#informes">Informes</a></li>
+        <li><a href="#contact">Contacto</a></li>
+    </ul>
     </header>
     <!-- Contenido principal de la página -->
     <main>
