--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -9,25 +9,21 @@
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
     <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
-    <style>
-        .header-page{
-            background-color: rgb(76, 141, 214);>}
-    </style>
+
 </head>
 
 <body>
-
-    <header>
+    <header class="headerprincipal">
         <!--Barra de logo portal-->
         <div class="header-page">
-            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" 
-            width="200"
-            alt="logo" 
-            class="logo" 
-            style="background-color: rgb(76, 141, 214);">
-            
+            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logo" alt="logo">
         </div>
     </header>
+    <div class="informes-header">
+        <button>
+            <a href="informes.html" target="_self" class="linkinformes-header">Informes</a>
+        </button>
+    </div>
     <!--Barra de menú principal-->
     <ul>
         <li><a class="active" href="#informes">Informes</a></li>
