--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -8,35 +8,46 @@
     <link rel="shortcut icon" type="image/png" href="favicon-16x16.png">
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/pages/index.css">
     <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
 
 </head>
 
 <body>
     <header class="headerprincipal">
-        <!--Barra de logo portal-->
+        <!--Barra de logo portal--> 
+        <!--Barra de menú principal-->
         <div class="header-page">
-            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logo" alt="logo">
+            <a href="inde"><img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logo" alt="logo"></a>
         </div>
     </header>
-    <div class="informes-header">
+    <div style="text-align:right;" class="informes-header">
         <button>
-            <a href="informes.html" target="_self" class="linkinformes-header">Informes</a>
+            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">Informes</a>
         </button>
     </div>
-    <!--Barra de menú principal-->
-    <ul>
-        <li><a class="active" href="#informes">Informes</a></li>
-        <li><a href="#contact">Contacto</a></li>
-    </ul>
-    </header>
+
     <!-- Contenido principal de la página -->
     <main>
-        <section id="sec-titulo">
+        <section id="sec-titulo" class="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
-            <h2>Titulo de Sección</h2>
-            <p>Párrafo o subtítulo</p>
-            <div>Imagen</div>
+            <div class="texto-titulo">
+                <h2>Resultados Electorales</h2>
+            </div>
+            <div class="texto-principal">
+                <p>“La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio
+                    del Interior ponen a disposición una herramienta de búsqueda avanzada y generación
+                    de informes personalizados con los resultados provisionales de las elecciones
+                    desarrolladas en los últimos años.
+                    Los resultados que se presentan son los correspondientes a escrutinios provisorios de
+                    elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se
+                    presentan los resultados provisionales de las elecciones provinciales y/o locales
+                    realizados bajo la adhesión a ley de simultaneidad.
+                </p>
+            </div>
+            <div class="imagen-electoral">
+                <img src="img/images.png" alt="imagen-electoral">
+            </div>
         </section>
         <section id="sec-contenido">
             <!--Seccion para contenido de la página-->
