--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -13,17 +13,17 @@
 </head>
 
 <body>
-    <header>
+    <header class="headerprincipal">
         <!--Barra de logo portal-->
         <div class="header-page">
-            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" 
-            width="200"
-            alt="logo" 
-            class="logo" 
-            style="background-color: rgb(76, 141, 214);">
-            
+            <a href="index.html"><img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logo" alt="logo"></a>
         </div>
     </header>
+    <div style="text-align:right;" class="informes-header">
+        <button>
+            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">Informes</a>
+        </button>
+    </div>
     <!-- Contenido principal de la página -->
     <main>
         <section id="sec-titulo">
