--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -21,13 +21,19 @@
     </header>
     <div style="text-align:right;" class="informes-header">
         <button>
-            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">Informes</a>
+            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">inicio</a>
+           
         </button>
+        <a href="paso.html" target="_self" class="linkpaso-header" >Paso</a>
+        <a href="generales.html" target="_self" class="linkgenerales-header" >Generales</a>
     </div>
     <!-- Contenido principal de la página -->
     <main>
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
+            <h3>Se agregó con éxito el resultado al informe</h3>
+            <h3>Error: se prodijo un error al intentar consultar los resultados</h3>
+            <h3>No tiene resultados agregados al informe</h3>
             <h2>Reportes de Elecciones</h2>
             <p>En esta seccion se visualizará s los datos que fueron agregados al informe en la página de
                 resultados</p>
