--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/pages/index.css">
     <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 </head>
 
@@ -18,13 +20,26 @@
         <!--Barra de logo portal--> 
         <!--Barra de menú principal-->
         <div class="header-page">
-            <a href="inde"><img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logo" alt="logo"></a>
+            <a href="index.html"><img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logo" alt="logo"></a>
         </div>
     </header>
-    <div style="text-align:right;" class="informes-header">
-        <button>
-            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">Informes</a>
-        </button>
+    <div  class="header-low">
+        <table class="table-header">
+            <tr>
+                <th class="consultar-header">
+                    CONSULTAR:   
+                </th>
+                <th>  
+                        <a href="paso.html" target="_self" class="linkpaso-header">PASO</a>            
+                </th>
+                <th>                 
+                        <a href="generales.html" target="_self" class="linkgenerales-header">GENERALES</a>            
+                </th>
+                <th>
+                        <a href="informes.html" target="_self"  class="linkinformes-header" >INFORMES</a>
+                </th>
+            </tr>
+        </table>
     </div>
 
     <!-- Contenido principal de la página -->
@@ -32,18 +47,15 @@
         <section id="sec-titulo" class="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
             <div class="texto-titulo">
-                <h2>Resultados Electorales</h2>
-            </div>
-            <div class="texto-principal">
-                <p>“La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio
-                    del Interior ponen a disposición una herramienta de búsqueda avanzada y generación
-                    de informes personalizados con los resultados provisionales de las elecciones
-                    desarrolladas en los últimos años.
-                    Los resultados que se presentan son los correspondientes a escrutinios provisorios de
-                    elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se
-                    presentan los resultados provisionales de las elecciones provinciales y/o locales
-                    realizados bajo la adhesión a ley de simultaneidad.
-                </p>
+                <h1>Resultados electorales</h1>
+                <p>La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio del
+                Interior ponen a disposición una herramienta de búsqueda avanzada y generación de informes
+                personalizados con los resultados provisionales de las elecciones desarrolladas en los
+                últimos años.
+                <br>Los resultados que se presentan son los correspondientes a escrutinios provisorios de
+                elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se presentan
+                los resultados provisionales de las elecciones provinciales y/o locales realizadas bajo la
+                adhesión a ley de simultaneidad. </p>
             </div>
             <div class="imagen-electoral">
                 <img src="img/images.png" alt="imagen-electoral">
