--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/pages/informes.css" />
     <link rel="shortcut icon" href="img/icons/favicon-16x16.png">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -31,9 +32,9 @@
     <main>
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
-            <h3>Se agregó con éxito el resultado al informe</h3>
-            <h3>Error: se prodijo un error al intentar consultar los resultados</h3>
-            <h3>No tiene resultados agregados al informe</h3>
+            <h3><i class="fa-thumbs-up"></i> Se agregó con éxito el resultado al informe</h3>
+            <h3><i class="fa-exclamation-triangle"></i> Error: se prodijo un error al intentar consultar los resultados</h3>
+            <h3><i class="fa-exclamation"></i> No tiene resultados agregados al informe</h3>
             <h2>Reportes de Elecciones</h2>
             <p>En esta seccion se visualizará s los datos que fueron agregados al informe en la página de
                 resultados</p>
@@ -404,7 +405,13 @@
     </main>
     <!--Pie de página-->
     <footer>
-        <p>Desarrollado con ♥ - LC2</p>
+        <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" class="Ministerio" alt="Ministerio">
+        <img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logoFooter" alt="logoFooter"></a>
+        <img src="img/icons/logos_001-10.4430c8d5.png"  class="logos" alt="logos"></a>
+        <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
+            Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme al art. 45 Ley 26.571 y afirmativos (Generales).
+             No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
+
     </footer>
 </body>
 
