--- a/tup-lc2-votacion-app/generales.html
+++ b/tup-lc2-votacion-app/generales.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Publicación de Resultados Electorales</title>
-    <link rel="shortcut icon" type="image/png" href="favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" href="img/icons/favicon-16x16.png">
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/pages/generales.css">
 </head>
 
+
 <body>
-    <header>
+    <header class="header-generales">
         <!--Barra de logo portal-->
-        <div class="header-page">
-            <img src="img/dine.png" alt="logo" class="logo"> Dirección Nacional Electoral
+        <div class="container-logo">
+            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" alt="logo" class="logo">
         </div>
-        <!--Barra de menú principal-->
-        <ul>
-            <li><a class="active" href="#informes">Informes</a></li>
-            <li><a href="#contact">Contacto</a></li>
-        </ul>
+
+        <div class="container-menu">
+            <ul>
+                <li><a class="active" href="#informes">Informes</a></li>
+                <li><a href="#contact">Contacto</a></li>
+            </ul>
+        </div>
+
     </header>
     <!-- Contenido principal de la página -->
     <main>
