--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -15,15 +15,15 @@
 
 <body>
     <header class="headerprincipal">
-        <!--Barra de logo portal--> 
+        <!--Barra de logo portal-->
         <!--Barra de menú principal-->
         <div class="header-page">
-            <a href="inde"><img src="img/icons/Logo_DINE_negativo.a88f983e.png"  class="logo" alt="logo"></a>
+            <a href="index.html"><img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logo" alt="logo"></a>
         </div>
     </header>
     <div style="text-align:right;" class="informes-header">
         <button>
-            <a href="informes.html" target="_self"  class="linkinformes-header" style="color: white;">Informes</a>
+            <a href="informes.html" target="_self" class="linkinformes-header" style="color: white;">Informes</a>
         </button>
     </div>
 
