--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -50,7 +50,7 @@
             <h3><p><span><i class="fa fa-exclamation-triangle"></i></span> Error: se prodijo un error al intentar consultar los resultados</p></h3>
             <h3><p><span><i class="fa fa-exclamation"></i></span> No tiene resultados agregados al informe</p></h3>
             <h2>Reportes de Elecciones</h2>
-            <p>En esta seccion se visualizará s los datos que fueron agregados al informe en la página de
+            <p>En esta seccion se visualizarán los datos que fueron agregados al informe en la página de
                 resultados</p>
             <div></div>
         </section>
@@ -86,6 +86,7 @@
                                 Nacionales > Ciudad Autónoma de Buenos Aires</p>
                         </td>
                         <td>
+                            
                             <p>Mesas Escrutadas
                                    62,71%
                             </p>
