--- a/tup-lc2-votacion-app/informes.html
+++ b/tup-lc2-votacion-app/informes.html
@@ -47,7 +47,7 @@
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
             <h3><p><span><i class="fa fa-thumbs-up"></i></span> Se agregó con éxito el resultado al informe</p></h3>
-            <h3><p><span><i class="fa fa-exclamation-triangle"></i></span> Error: se prodijo un error al intentar consultar los resultados</p></h3>
+            <h3><p><span><i class="fa fa-exclamation-triangle"></i></span> Error: se produjo un error al intentar consultar los resultados</p></h3>
             <h3><p><span><i class="fa fa-exclamation"></i></span> No tiene resultados agregados al informe</p></h3>
             <h2>Reportes de Elecciones</h2>
             <p>En esta seccion se visualizarán los datos que fueron agregados al informe en la página de
