--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -47,45 +47,45 @@
     <main>
         <section id="sec-titulo" class="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
-            <table class="table-general">
-                <div class="texto-titulo">
-                    <tr class="table-resultados">
-                        <td>
-                            <h1>Resultados electorales</h1>
-                        </td>
-                    </tr>
-                    <tr class="table-informacion">
-                        <td>
-                            <p>La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio del
-                                Interior ponen a disposición una herramienta de búsqueda avanzada y generación de
-                                informes
-                                personalizados con los resultados provisionales de las elecciones desarrolladas en los
-                                últimos años.
-                                <br>Los resultados que se presentan son los correspondientes a escrutinios provisorios
-                                de
-                                elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se
-                                presentan
-                                los resultados provisionales de las elecciones provinciales y/o locales realizadas bajo
-                                la
-                                adhesión a ley de simultaneidad.
-                            </p>
-                        </td>
-                </div>
-                        <td>
-                        <div class="imagen-electoral">
-                            <img src="img/images.png" alt="imagen-electoral">
-                        </div>
-                        </td>
-                    </tr>
-            </table>
+            <div class="texto-titulo">
+                <h1>Resultados electorales</h1>
+                <p class="large-text">La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio del
+                    Interior ponen a disposición una herramienta de búsqueda avanzada y generación de
+                    informes
+                    personalizados con los resultados provisionales de las elecciones desarrolladas en los
+                    últimos años.
+                    <br>Los resultados que se presentan son los correspondientes a escrutinios provisorios
+                    de
+                    elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se
+                    presentan
+                    los resultados provisionales de las elecciones provinciales y/o locales realizadas bajo
+                    la
+                    adhesión a ley de simultaneidad.
+                </p>
+            </div>
+            <div class="imagen-electoral">
+                <img src="img/images.png" alt="imagen-electoral">
+            </div>
         </section>
-        <section id="sec-contenido">
-            <!--Seccion para contenido de la página-->
+        <section id="sec-contenido" class="sec-contenido">
+            <h2>Elecciones 2021</h3>
+            <p>Seleccione el tipo de elección que quiere consultar</p>
+            <div class="paso-generales">
+                <a href="paso.html">Paso</a>
+                <a href="generales.html">Generales</a>
+            </div>
         </section>
     </main>
     <!--Pie de página-->
     <footer>
-        <p>Desarrollado con ♥ - LC2</p>
+        <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" class="Ministerio" alt="Ministerio">
+        <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logoFooter" alt="logoFooter"></a>
+        <img src="img/icons/logos_001-10.4430c8d5.png" class="logos" alt="logos"></a>
+        <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
+            Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme al art.
+            45 Ley 26.571 y afirmativos (Generales).
+            No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la
+            libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
     </footer>
 </body>
 
