--- a/tup-lc2-votacion-app/index.html
+++ b/tup-lc2-votacion-app/index.html
@@ -50,15 +50,15 @@
             <div class="texto-titulo">
                 <h1>Resultados electorales</h1>
                 <p class="large-text">La Dirección Nacional Electoral y el Observatorio Político Electoral del Ministerio del
-                    Interior ponen a disposición una herramienta de búsqueda avanzada y generación de
-                    informes
+                    Interior <br>ponen a disposición una herramienta de búsqueda avanzada y generación de
+                    <br>informes
                     personalizados con los resultados provisionales de las elecciones desarrolladas en los
                     últimos años.
                     <br>Los resultados que se presentan son los correspondientes a escrutinios provisorios
                     de
-                    elecciones nacionales. Dicho recuento es responsabilidad de la DINE. También se
+                    elecciones nacionales. <br>Dicho recuento es responsabilidad de la DINE. También se
                     presentan
-                    los resultados provisionales de las elecciones provinciales y/o locales realizadas bajo
+                    los resultados provisionales de las elecciones <br>provinciales y/o locales realizadas bajo
                     la
                     adhesión a ley de simultaneidad.
                 </p>
@@ -68,11 +68,17 @@
             </div>
         </section>
         <section id="sec-contenido" class="sec-contenido">
-            <h2>Elecciones 2021</h3>
-            <p>Seleccione el tipo de elección que quiere consultar</p>
-            <div class="paso-generales">
-                <a href="paso.html">Paso</a>
-                <a href="generales.html">Generales</a>
+                <h2>Elecciones 2021</h3>
+                <p>Seleccione el tipo de elección que quiere consultar</p>
+            <div class="paso-generales3">
+                <div class="paso-generales">
+                    <img src="img/votacion.png" alt="voto-img" class="imgvoto" width="80px">
+                    <a href="paso.html" class="section-linkpaso">Paso</a>
+                </div>
+                <div class="paso-generales2">
+                    <img src="img/votacion.png" alt="voto-img2" class="imgvoto2" width="80px">
+                    <a  href="generales.html" class="section-linkgenerales">Generales</a>
+                </div>
             </div>
         </section>
     </main>
