--- a/tup-lc2-votacion-app/generales.html
+++ b/tup-lc2-votacion-app/generales.html
@@ -75,7 +75,7 @@
 
             <div class="paso-generales">
 
-                <input type="submit" class="add-informe" value="AGREGAR A INFORMES">
+                <input type="submit" class="add-informe" value="+AGREGAR A INFORME">
                 
                 <h4 class="mesas-computadas"><b>Mesas computadas</b><br>2.586</h4>
 
@@ -130,16 +130,13 @@
 
     <!--Pie de página-->
     <footer>
-        <div class="footer">
-            <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" class="Ministerio" alt="Ministerio">
-            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logoFooter" alt="logoFooter"></a>
-            <img src="img/icons/logos_001-10.4430c8d5.png" class="logos" alt="logos"></a>
-            <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
-                Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme al
-                art.
-                45 Ley 26.571 y afirmativos (Generales).
-                No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la
-                libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
-        </div>
+        <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" class="Ministerio" alt="Ministerio">
+        <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logoFooter" alt="logoFooter"></a>
+        <img src="img/icons/logos_001-10.4430c8d5.png" class="logos" alt="logos"></a>
+        <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
+            Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme al art.
+            45 Ley 26.571 y afirmativos (Generales).
+            No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la
+            libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
     </footer>
 </body>
