--- a/tup-lc2-votacion-app/try2-generales.html
+++ b/tup-lc2-votacion-app/try2-generales.html
@@ -80,15 +80,15 @@
         </section>
 
         <div class="sec-contenido">
-
-            <!--Parte 1-->
-            <div class="add-informe">
-                <input type="submit" class="add-informe" value=" + AGREGAR A INFORMES">
-            </div>
-
-
-            <!--Parte 2-->
             <div class="carteles">
+
+                <div class="add-informe">
+                    <input type="submit" class="add-informe" value=" + AGREGAR A INFORMES">
+                </div>
+
+                <div class="vacio">
+
+                </div>
 
                 <div class="mesas-escrutadas">
 
@@ -108,7 +108,7 @@
                             </path>
                         </g>
                     </svg>
-                    <p><b>Mesas Escrutadas</b><br>62.71%</p>
+                    <p><b>Mesas Computadas</b><br>2.586</p>
                 </div>
 
                 <div class="electores">
@@ -197,7 +197,7 @@
                                                                     c-0.238-0.571-0.797-0.944-1.416-0.944l0,0c-4.601,1.534-7.55-4.364-8.966-9.319c-2.595-10.027-1.18-14.864,0.473-17.105H180.521z">
                         </path>
                     </svg>
-                    <p><b>Electores</b><br>62.71%</p>
+                    <p><b>Electores</b><br>878.580</p>
                 </div>
 
                 <div class="participacion">
@@ -253,7 +253,7 @@
                     C184.178,409.323,186.501,406.999,189.368,406.999z"></path>
                         <rect x="195.975" y="387.534" fill="#FFFFFF" width="69.013" height="14.393"></rect>
                     </svg>
-                    <p><b>Participacion en mesas escrutadas</b><br>62.71%</p>
+                    <p><b>Participacion en mesas escrutadas</b><br>65,2%</p>
                 </div>
             </div>
         </div>
@@ -262,38 +262,77 @@
             <div class="cuadro-agrupacion">
 
                 <div class="recuadro">
-                    <h2 class="titulo-recuadro">Agrupaciones políticas</h2>
+                    <h2 class="titulo-agrupacion">Agrupaciones políticas</h2>
                     <div class="scroll-vertical" style="height: 325px;">
-                        <div class="texto-agrupaciones">
-                            <p
-                                style="font-size: 11px; color: var(--textos); padding: 5px; text-transform: uppercase; font-weight: bold;">
-                                JUNTOS POR EL CAMBIO</p>
-                            <!-- Más texto aquí -->
-                        </div>
-                        <h3 class="titulo-agrupacion">Título de la agrupación</h3>
-                        <div class="barra-progreso">
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--grafica-amarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
+
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5>ECO + <br>VAMOS CORRIENTES</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>58.95%<br>320.878 votos</h5>
                             </div>
                         </div>
+                            <div class="bar" style="--bar-value:58.95%;" data-name="vamos-corrientes"
+                                title="Your Blog 58.95%"></div>
+
+
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5>FRENTE DE TODOS</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>26.54<br>198.772 votos</h5>
+                            </div>
+                        </div>
+                        <div class="bar" id="bar-frente-de-todos" style="--bar-value:26.54%;" data-name="Partido 2" title="LinkedIn 30%"></div>
+
+
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5>ECO + <br>VAMOS CORRIENTES</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>58.95%<br>320.878 votos</h5>
+                            </div>
+                        </div>
+                        <div class="bar" style="--bar-value:5%;" data-name="Partido 3" title="Twitter 5%"></div>
+
+
+
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5>ECO + <br>VAMOS CORRIENTES</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>58.95%<br>320.878 votos</h5>
+                            </div>
+                        </div>
+                        <div class="bar" style="--bar-value:20%;" data-name="Partido 4" title="Other 20%"></div>
                     </div>
                 </div>
 
                 <div class="recuadro">
                     <h2 class="titulo-recuadro">Provincia</h2>
                     <div class="imagen-provincia">
-                        <svg height="210" width="max-content"><path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="#18a0fb" fill-opacity="1" fill-rule="evenodd" d="M171 55L163 53L150 45L147 50L143 49L133 60L114 60L114 151L116 151L120 155L122 156L126 153L128 149L124 145L126 143L126 138L128 138L129 133L126 129L126 122L134 126L139 126L169 119L179 114L189 97L190 89L189 87L186 87L182 82L185 75L181 69L171 63L170 64L170 58z"></path></svg>
+                        <svg height="210" width="max-content">
+                            <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round" fill="#18a0fb" fill-opacity="1"
+                                fill-rule="evenodd"
+                                d="M106 135L108 138L109 135L116 136L122 132L123 133L131 130L139 134L143 141L148 145L147 139L151 137L153 133L152 131L154 131L159 126L160 121L168 117L169 114L174 109L176 103L180 102L183 95L186 93L189 87L192 86L193 83L197 85L195 80L197 80L198 78L194 73L194 69L188 60L189 58L186 57L180 64L177 60L174 60L173 62L170 60L164 61L145 55L130 56L127 58L124 61L126 69L125 72L123 77L120 77L119 80L120 91L117 100L116 102L114 102L112 106L110 106L108 111L108 117L106 121L109 127L106 133L107 135z">
+                            </path>
+                        </svg>
+
                     </div>
                 </div>
 
                 <div class="recuadro">
                     <h2 class="titulo-recuadro">Resumen de Votos</h2>
-                    <!-- Aquí se insertarán las barras de progreso dinámicamente -->
-                    <div class="bar" style="--bar-value:85%;--bar-color:var(--grafica-amarillo);" data-name="Partido 1"
-                        title="Your Blog 85%"></div>
-                    <!-- Más barras aquí -->
+
                 </div>
             </div>
 
@@ -318,5 +357,3 @@
         </div>
     </footer>
 </body>
-
-INFORMES
