main hecho + avance footer

--- a/tup-lc2-votacion-app/try2-generales.html
+++ b/tup-lc2-votacion-app/try2-generales.html
@@ -74,8 +74,7 @@
         <section>
             <!--Seccion para agregar una palicula favorita por codigo-->
             <h2>Elecciones 2021 | Generales</h2>
-            <p class="texto-path">2020 > Generales > Provisorio > Senadores Nacionales > Buenos
-                Aires</p>
+            <p class="texto-path">2020 > Generales > Provisorio > Senadores Nacionales > Corrientes</p>
             <br><br>
         </section>
 
@@ -267,28 +266,15 @@
 
                         <div class="partido">
                             <div class="nombre-partido">
-                                <h5>ECO + <br>VAMOS CORRIENTES</h5>
+                                <h5>JUNTOS POR EL CAMBIO</h5>
                             </div>
 
                             <div class="porcentaje">
-                                <h5>58.95%<br>320.878 votos</h5>
+                                <h5>38.00%<br>300.000 votos</h5>
                             </div>
                         </div>
-                            <div class="bar" style="--bar-value:58.95%;" data-name="vamos-corrientes"
-                                title="Your Blog 58.95%"></div>
-
-
-                        <div class="partido">
-                            <div class="nombre-partido">
-                                <h5>FRENTE DE TODOS</h5>
-                            </div>
-
-                            <div class="porcentaje">
-                                <h5>26.54<br>198.772 votos</h5>
-                            </div>
-                        </div>
-                        <div class="bar" id="bar-frente-de-todos" style="--bar-value:26.54%;" data-name="Partido 2" title="LinkedIn 30%"></div>
-
+                        <div class="bar" id="bar-juntos-por-el-cambio" style="--bar-value:58.95%;"
+                            data-name="bar-juntos-por-el-cambio" title="Your Blog 58.95%"></div>
 
                         <div class="partido">
                             <div class="nombre-partido">
@@ -299,44 +285,96 @@
                                 <h5>58.95%<br>320.878 votos</h5>
                             </div>
                         </div>
-                        <div class="bar" style="--bar-value:5%;" data-name="Partido 3" title="Twitter 5%"></div>
+                        <div class="bar" id="bar-vamos-corrientes" style="--bar-value:58.95%;"
+                            data-name="vamos-corrientes" title="Your Blog 58.95%"></div>
 
-
-
+                        <br>
                         <div class="partido">
                             <div class="nombre-partido">
-                                <h5>ECO + <br>VAMOS CORRIENTES</h5>
+                                <h5><br>FRENTE DE TODOS</h5>
                             </div>
 
                             <div class="porcentaje">
-                                <h5>58.95%<br>320.878 votos</h5>
+                                <h5>26.54%<br>198.772 votos</h5>
                             </div>
                         </div>
-                        <div class="bar" style="--bar-value:20%;" data-name="Partido 4" title="Other 20%"></div>
+                        <div class="bar" id="bar-frente-de-todos" style="--bar-value:26.54%;" data-name="Partido 2"
+                            title="LinkedIn 30%"></div>
+
+                        <br>
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5><br>VAMOS CON VOS</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>2.51%<br>13.632 votos</h5>
+                            </div>
+                        </div>
+                        <div class="bar" id="bar-vamos-con-vos" style="--bar-value:2.51%;" data-name="Partido 3"
+                            title="Twitter 5%"></div>
+
+
+                        <br>
+                        <div class="partido">
+                            <div class="nombre-partido">
+                                <h5><br>COMPROMISO FEDERAL</h5>
+                            </div>
+
+                            <div class="porcentaje">
+                                <h5>1.98%<br>10.750 votos</h5>
+                            </div>
+                        </div>
+                        <div class="bar" id="bar-compromiso-federal" style="--bar-value:1.98%;" data-name="Partido 4"
+                            title="Other 20%"></div>
                     </div>
                 </div>
 
                 <div class="recuadro">
-                    <h2 class="titulo-recuadro">Provincia</h2>
-                    <div class="imagen-provincia">
-                        <svg height="210" width="max-content">
-                            <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" fill="#18a0fb" fill-opacity="1"
-                                fill-rule="evenodd"
-                                d="M106 135L108 138L109 135L116 136L122 132L123 133L131 130L139 134L143 141L148 145L147 139L151 137L153 133L152 131L154 131L159 126L160 121L168 117L169 114L174 109L176 103L180 102L183 95L186 93L189 87L192 86L193 83L197 85L195 80L197 80L198 78L194 73L194 69L188 60L189 58L186 57L180 64L177 60L174 60L173 62L170 60L164 61L145 55L130 56L127 58L124 61L126 69L125 72L123 77L120 77L119 80L120 91L117 100L116 102L114 102L112 106L110 106L108 111L108 117L106 121L109 127L106 133L107 135z">
-                            </path>
-                        </svg>
+                    <h2 class="titulo-recuadro">Corrientes</h2>
+                    <svg height="210" width="300">
+                        <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" fill="#18a0fb" fill-opacity="1"
+                            fill-rule="evenodd"
+                            d="M106 135L108 138L109 135L116 136L122 132L123 133L131 130L139 134L143 141L148 145L147 139L151 137L153 133L152 131L154 131L159 126L160 121L168 117L169 114L174 109L176 103L180 102L183 95L186 93L189 87L192 86L193 83L197 85L195 80L197 80L198 78L194 73L194 69L188 60L189 58L186 57L180 64L177 60L174 60L173 62L170 60L164 61L145 55L130 56L127 58L124 61L126 69L125 72L123 77L120 77L119 80L120 91L117 100L116 102L114 102L112 106L110 106L108 111L108 117L106 121L109 127L106 133L107 135z">
+                        </path>
+                    </svg>
 
-                    </div>
+
                 </div>
 
                 <div class="recuadro">
-                    <h2 class="titulo-recuadro">Resumen de Votos</h2>
+                    <div class="chart-wrap horizontal">
+                        <div class="title">Resumen de los votos</div>
+                        <div class="grid">
+                            <div class="columna" style="--columna-value:85%;--columna-color:var(--grafica-amarillo);"
+                                data-name="Partido 1" title="Your Blog 85%">
 
+                            </div>
+                            <div class="columna" style="--columna-value:23%;--columna-color:var(--grafica-lila2);"
+                                data-name="Partido 2" title="Medium
+                            23%"></div>
+                            <div class="columna" style="--columna-value:7%;--columna-color:var(--grafica-bordo);"
+                                data-name="Partido 3" title="Tumblr
+                            7%"></div>
+                            <div class="columna" style="--columna-value:38%;--columna-color:var(--grafica-celeste);"
+                                data-name="Partido 4" title="Facebook
+                            38%"></div>
+
+                            <div class="columna" style="--columna-value:5%;--columna-color:var(--grafica-lila);"
+                                data-name="Partido 5" title="Twitter
+                            5%"></div>
+                            <div class="columna" style="--columna-value:30%;--columna-color:var(--grafica-bordo);"
+                                data-name="Partido 6" title="LinkedIn
+                            30%"></div>
+                            <div class="columna" style="--columna-value:20%;--columna-color:var(--grafica-gris);"
+                                data-name="Otros" title="Other
+                            20%"></div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
-
-        </div>
 
 
     </main>
@@ -345,15 +383,22 @@
     <!--Pie de página-->
     <footer>
         <div class="footer">
-            <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" class="Ministerio" alt="Ministerio">
-            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" class="logoFooter" alt="logoFooter"></a>
-            <img src="img/icons/logos_001-10.4430c8d5.png" class="logos" alt="logos"></a>
-            <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
-                Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme al
-                art.
-                45 Ley 26.571 y afirmativos (Generales).
-                No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la
-                libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
+            <div class="imagenes-footer">
+                <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" alt="Ministerio">
+                <img src="img/icons/Logo_DINE_negativo.a88f983e.png"  alt="Dine"></a>
+                <img src="img/icons/logos_001-10.4430c8d5.png"alt="Observatorio"></a>
+            </div>
+
+            <div class="texto-footer">
+                <h4>Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945).
+                    Los porcentajes de las agrupaciones políticas son calculados spbre los votos válidos (PASO) conforme
+                    al
+                    art.
+                    45 Ley 26.571 y afirmativos (Generales).
+                    No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de
+                    la
+                    libertad. Al usar este sitio usted acepta los Términos y Condiciones</h4>
+            </div>
         </div>
     </footer>
 </body>
